Fixed an issue on firefox with changing the selected options as the type of conversion changes. Improved code.

--- a/css/main.css
+++ b/css/main.css
@@ -18,13 +18,13 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem 2rem;
+  padding: 1rem 2rem;
   background-color: var(--myOrange);
   color: white;
 }
 
 h2 {
-  margin: 1rem 0 0 0;
+  margin: 3.5rem 0 0 0;
 }
 
 .text {
